# bigjson

./: .gitignore  Cargo.toml
crates/client/: Cargo.toml
crates/client/examples/: chat.rs
crates/client/src/: batch.rs  client.rs  error.rs  json_patch.rs  lib.rs  subscription.rs
crates/json-patch/: Cargo.toml
crates/json-patch/src/: lib.rs
crates/json-pointer/: Cargo.toml
crates/json-pointer/src/: error.rs  json_pointer.rs  json_pointer_ref.rs  lib.rs  macros.rs  parser.rs  value_ext.rs
crates/memdb/: Cargo.toml
crates/memdb/src/: db.rs  error.rs  lib.rs  undo_command.rs
crates/persistentdb/: Cargo.toml
crates/persistentdb/src/: block_file.rs  db.rs  error.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  handler_delete.rs  handler_get.rs  handler_patch.rs  handler_post.rs  handler_put.rs  handler_sse.rs  handler_subscribe.rs  handler_ws.rs  lib.rs  server.rs  state.rs  subscription_patch.rs  utils.rs
src/: main.rs
