[package]
name = "bigjson-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
futures-util = "0.3.21"
tokio = { version = "1.17.0", features = ["sync", "macros"] }
reqwest = { version = "0.11.10", default_features = false, features = ["rustls-tls", "json", "stream"] }
sse-codec = "0.3.2"
tokio-util = { version = "0.7.0", features = ["io", "compat"] }

[dev-dependencies]
clap = { version = "3.1.6", features = ["derive"] }
rustyline = "9.1.2"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
