[package]
edition = "2021"
name = "jsondb-persistentdb"
version = "0.1.0"

[dependencies]
json-pointer = { path = "../json-pointer", package = "jsondb-json-pointer" }
json-patch = { path = "../json-patch", package = "jsondb-json-patch" }
memdb = { path = "../memdb", package = "jsondb-memdb" }

thiserror = "1.0.30"
serde_json = { version = "1.0.79", features = ["std"] }
serde = { version = "1.0.136", features = ["derive"] }
tracing = "0.1.32"
