[package]
edition = "2021"
name = "bigjson-persistentdb"
version = "0.1.0"

[dependencies]
json-pointer = { path = "../json-pointer", package = "bigjson-json-pointer" }
json-patch = { path = "../json-patch", package = "bigjson-json-patch" }
memdb = { path = "../memdb", package = "bigjson-memdb" }

thiserror = "1.0.30"
serde_json = { version = "1.0.79", features = ["std"] }
serde = { version = "1.0.136", features = ["derive"] }
tracing = "0.1.32"
