[package]
name = "jsondb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
memdb = { path = "../memdb", package = "jsondb-memdb" }
persistentdb = { path = "../persistentdb", package = "jsondb-persistentdb" }
json-pointer = { path = "../json-pointer", package = "jsondb-json-pointer" }
json-patch = { path = "../json-patch", package = "jsondb-json-patch" }

clap = { version = "3.1.6", features = ["derive"] }
poem = { version = "1.3.16", features = ["sse"] }
serde = { version = "1.0.136", features = ["derive"] }
parking_lot = "0.12.0"
tracing = "0.1.32"
serde_json = "1.0.79"
crossbeam = "0.8.1"
tokio = { version = "1.17.0", features = ["sync", "time"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
